; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-ild.c_long_nop.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-ild.c_long_nop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptunit_result = type { i32 }

@__const.long_nop.insn = private unnamed_addr constant [15 x i32] [i32 102, i32 102, i32 102, i32 102, i32 102, i32 102, i32 46, i32 15, i32 31, i32 132, i32 0, i32 0, i32 0, i32 0, i32 0], align 16
@ptem_64bit = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @long_nop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @long_nop() #0 {
  %1 = alloca %struct.ptunit_result, align 4
  %2 = alloca [15 x i32], align 16
  %3 = bitcast [15 x i32]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %3, i8* align 16 bitcast ([15 x i32]* @__const.long_nop.insn to i8*), i64 60, i1 false)
  %4 = getelementptr inbounds [15 x i32], [15 x i32]* %2, i64 0, i64 0
  %5 = load i32, i32* @ptem_64bit, align 4
  %6 = call i32 @ptu_decode_s(i32* %4, i32 %5)
  %7 = call i32 (...) @ptu_passed()
  %8 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  ret i32 %10
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @ptu_decode_s(i32*, i32) #2

declare dso_local i32 @ptu_passed(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
